deploy/k8s/frontend/ingressroute.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: rma-frontend-tls
spec:
  entryPoints:
    - websecure
  tls:
    secretName: rma-dev.raise.openstax.org-tls
  routes:
    - match: REPLACED_IN_PIPELINE
      kind: Rule
      services:
        - name: rma-frontend
          port: 80

---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: rma-frontend
spec:
  entryPoints:
    - web
  routes:
    - match: REPLACED_IN_PIPELINE
      kind: Rule
      middlewares:
        - name: rma-http-redirect
      services:
        - name: rma-frontend
          port: 80
